# neurosheaf

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  EIGENVALUE_ANALYSIS_REPORT.md  FINAL_VALIDATION_REPORT.md  Makefile  README.md  RESNET18_TEST_USAGE.md  comprehensive_laplacian_validation.py  debug_complex_model.py  debug_detailed_dimensions.py  debug_fx_detailed.py  debug_node_classifier_data.py  debug_node_classifier_fixed.py  debug_psd_issue.py  debug_restriction.py  debug_sheaf_dimensions.py  debug_whitening_processor.py  dtw_parameter_optimizer.py  eigenvalue-impl-plan.md  eigenvalue_evolution_multivariate_dtw.py  eigenvalue_evolution_srvf_comparison.py  eigenvalue_evolution_srvf_comparison_parallel.py  eigenvalue_preserving_whitening_framework.md  guidelines.md  load_saved_models_example.py  load_saved_models_example_enhanced.py  neurosheaf_comprehensive_demo.py  neurosheaf_comprehensive_demo_robust.py  parallel_dtw_comparison.py  parallel_parameter_optimizer.py  pyproject.toml  pytest.ini  resnet18_end_to_end_test.py  resnet18_expected_metrics.md  resnet18_test_case.md  simple_dtw_comparison.py  test_all.py  test_all_directed.py  (+36 more)
.github/workflows/: release.yml  test.yml
benchmarks/: __init__.py  analyze_cka_results.py  cka_validate_resnet_fixed.py  memory_scaling.py  nystrom_validate_resnet.py  profile_baseline.py  reports.py  synthetic_data.py  week7_performance_validation.py
docs/: DirectedSheaf_mathematicalFormulation.md  FINAL_NYSTROM_VALIDATION_REPORT.md  Makefile  OPTIMIZED_LAPLACIAN_COMPREHENSIVE_REPORT.md  PHASE4_IMPLEMENTATION_ISSUES.md  PURE_WHITENED_ACCEPTANCE_ANALYSIS.md  WEEK7_COMPLETION_SUMMARY.md  api_filtration_params.md  comprehensive-implementation-plan-v3.md  comprehensive-update-summary.md  documentation.md  eigenvalue_preserving_whitening_framework.md  gw-sheaf-implementation-plan.md  sheaf_acceptance_criteria.md  spectral_sheaf_pipeline_report.md  test-poset-fx.md  tikhonov_regularization_research.md  updated-debiased-cka-v3.md  updated-optimized-laplacian-persistence-v3.md  updated-sheaf-construction-v3.md  visualization-plan-v3.md
examples/: dtw_eigenvalue_comparison.py  gw_api_usage.py
multivariate_dtw_results/: multivariate_dtw_report_20250718_183546.md  multivariate_dtw_report_20250718_185559.md  multivariate_dtw_report_20250718_190805.md  multivariate_dtw_report_20250718_194305.md
neurosheaf/: __init__.py  api.py  laplacian_test.py
neurosheaf/cka/: __init__.py  baseline.py  debiased.py  nystrom.py  pairwise.py  sampling.py
neurosheaf/directed_sheaf/: __init__.py  data_structures.py
neurosheaf/directed_sheaf/assembly/: __init__.py  builder.py  laplacian.py
neurosheaf/directed_sheaf/compatibility/: __init__.py  adapter.py
neurosheaf/directed_sheaf/conversion/: __init__.py  complex_reconstruction.py  real_embedding.py  utilities.py
neurosheaf/directed_sheaf/core/: __init__.py  complex_extension.py  (+3 more)
neurosheaf/sheaf/: __init__.py  construction.py  data_structures.py  laplacian.py  name_mapper.py  restriction.py  test_poset_builder.py
neurosheaf/spectral/: __init__.py  _deprecated.py  edge_weights.py  multi_parameter.py  persistent.py  static_laplacian.py  static_laplacian_masking.py  static_laplacian_unified.py  tracker.py  tracker_factory.py
neurosheaf/utils/: __init__.py  config.py  device.py  dtw_similarity.py  error_handling.py  exceptions.py  logging.py  memory.py  persistence_distances.py  profiling.py  psd_validation.py  simple_model_loader.py  validation.py
neurosheaf/visualization/: __init__.py  enhanced_factory.py  enhanced_poset.py  enhanced_spectral.py  factory.py  persistence.py  poset.py  spectral.py
neurosheaf_demo_results/reports/: comprehensive_analysis_report.md  sheaf_descriptions.txt
plan/: README.md  nystrom_fix_plan.md
plan/phase1_foundation/: implementation_plan.md  testing_suite.md
plan/phase2_cka/: implementation_plan.md  testing_suite.md
plan/phase3_sheaf/: implementation_plan.md  phase3_test_plan-2.md  phase3_validation_targets.md  testing_suite.md
plan/phase4_spectral/: implementation_plan.md  testing_suite.md
plan/phase5_visualization/: implementation_plan.md
plan/phase6_testing/: implementation_plan.md
plan/phase7_deployment/: implementation_plan.md
scripts/: compare_all_models_dtw.py  multivariate_dtw_similarity_analysis.py  simple_functional_similarity_test.py  test_dtw_two_models.py  test_functional_similarity_dtw.py
tests/: BASELINE_METRICS.md  __init__.py  compare_legacy_clean.py  conftest.py  debug_fx_tracing.py  quick_spectral_validation.py  resnet_test.py  resnet_test_clean.py  test_api_backward_compatibility.py  test_edge_masking_demonstration.py  test_eigenvalue_whitening.py  test_gw_api_integration.py  test_gw_assembly_integration.py  test_gw_core.py  test_gw_laplacian_assembly.py  test_gw_regression.py  test_gw_sheaf.py  test_gw_spectral_integration.py  test_hodge_laplacian.py  test_laplacian_filtration_masking.py  test_laplacian_filtration_simple.py  test_laplacian_method_consistency.py  validate_spectral_fixes.py
tests/benchmarks/: test_cka_bench.py
tests/comprehensive_validation/: README.md  TESTING_SUMMARY.md  __init__.py  run_comprehensive_validation.py  run_lightweight_validation.py  test_mathematical_correctness.py  test_performance_benchmarks.py  test_robustness_edge_cases.py
tests/directed_sheaf/: __init__.py  test_complex_extension.py  test_data_structures.py  test_directed_procrustes.py  test_directional_encoding.py
tests/integration/: __init__.py  test_dtw_integration.py  test_package_integration.py
tests/performance/: __init__.py  test_benchmarks.py  test_mac_baseline.py
tests/phase2_cka/: __init__.py
tests/phase4_spectral/: __init__.py  run_comprehensive_tests.py
tests/synthetic/: synthetic_eigenvalue_generators.py  test_dtw_synthetic_sequences.py
tests/unit/: __init__.py  test_exceptions.py  test_logging.py  test_numerical_stability.py  test_profiling.py
tests/utils/: test_dtw_similarity.py  test_persistence_distances.py
tests/validation/: __init__.py  test_gw_mathematical_properties.py  test_gw_performance.py
(+92 files in other folders)
